--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 @import "tailwindcss";
+
+header span {
+  font-family: 'Varela Round';
+  font-size: 1.8rem;
+}
