--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-
 @import "tailwindcss";
 
+/* Reset */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
