--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -55,7 +55,7 @@
 .user {
   display: flex;
   align-items: center;
-  gap: 1.6rem;
+  gap: 1rem;
 }
 
 .user .login {
@@ -128,6 +128,7 @@
   /* padding: 0.6rem 1.2rem; */
   padding: 1rem;
   border-radius: 2.5rem;
+  cursor: pointer;
 }
 
 .user .profile:hover {
@@ -137,4 +138,5 @@
 .user .profile img {
   height: 3.6rem;
   width: 3.6rem;
+  cursor: pointer;
 }
