--- a/components/Feed/FeedPost.module.css
+++ b/components/Feed/FeedPost.module.css
@@ -5,6 +5,10 @@
   font-size: 1.2rem;
 }
 
+.article {
+  border-top: 1px solid #e1dede;
+}
+
 .article:hover {
   background-color: #f9f9f9;
   border-radius: 2.5rem;
