modifed the feedsposts

--- a/components/Feed/FeedPost.module.css
+++ b/components/Feed/FeedPost.module.css
@@ -65,7 +65,7 @@
 .image img {
   /* max-height: fit-content;
   max-width: fit-content; */
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /* ----- CTA ----- */
